Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -538,25 +538,25 @@ Limitations of the Graham-Denning model:
 
 ```mermaid
 flowchart TD
-    subgraph Subjects
-        A[User A]
-        B[Process B]
-    end
+    %% Subjects
+    S1[User A]
+    S2[Process B]
 
-    subgraph Objects
-        F[File X]
-        P[Printer Y]
-    end
+    %% Objects
+    O1[File X]
+    O2[Printer Y]
 
-    A -->|Request to create| B
-    A -->|Request to create| F
+    %% Operations
+    S1 -->|Creates| S2
+    S1 -->|Creates| O1
+    S1 -->|Grants Read| O1
+    S1 -->|Transfers Ownership| O2
 
-    A -->|Grant Read to File X| F
-    A -->|Transfer Ownership of Printer Y| P
-
-    B -->|Delete File X| F
+    %% Optional deletion (only 1)
+    S2 -->|Deletes| O1
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 
 ```
+
