Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -538,22 +538,38 @@ Limitations of the Graham-Denning model:
 
 ```mermaid
 flowchart TD
-    %% Subjects
-    S1[User A]
-    S2[Process B]
+%% Subjects
+    SA[Subject A (Admin)]
+    SB[Subject B (Process/User)]
 
-    %% Objects
-    O1[File X]
-    O2[Printer Y]
+%% Objects
+    OF[Object File.txt]
+    OD[Object DB-Record]
 
-    %% Operations
-    S1 -->|Creates| S2
-    S1 -->|Creates| O1
-    S1 -->|Grants Read| O1
-    S1 -->|Transfers Ownership| O2
+%% Access Control Matrix
+    ACM[[Access Control Matrix]]
 
-    %% Optional deletion (only 1)
-    S2 -->|Deletes| O1
+%% Operations on Subjects & Objects
+    SA -->|Create Subject| SB
+    SA -->|Create Object| OF
+    SA -->|Delete Object| OD
+    SA -->|Delete Subject| SB
+
+%% Operations on Rights
+    SA -->|Read Access Rights| ACM
+    SA -->|Grant Read| SB
+    SA -->|Delete Access Rights| SB
+    SA -->|Transfer Ownership| SB
+
+%% Legend or group
+    subgraph Legend
+      direction TB
+      L1[Subjects: SA, SB]
+      L2[Objects: OF, OD]
+      L3[Rights: read, write, own, grant]
+      L4[ACM: Tracks permissions]
+    end
+    
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
