Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -539,8 +539,8 @@ Limitations of the Graham-Denning model:
 ```mermaid
 flowchart TD
 %% Subjects
-    SA[Subject A (Admin)]
-    SB[Subject B (Process/User)]
+    SA[Subject A: Admin]
+    SB[Subject B: Process/User]
 
 %% Objects
     OF[Object File.txt]
