Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -567,3 +567,82 @@ flowchart TD
 
 ```
 
+The **Harrison–Ruzzo–Ullman (HRU) Model** is an access control model that extends the Graham-Denning Model by focusing on how permissions change over time in a system. It defines a formal set of rules for creating, deleting, and modifying access rights, with an emphasis on security and computational feasibility.
+
+The Key Concepts of the HRU Model are:
+- Goal: Define a mathematical approach to managing access control while analyzing whether security policies can be enforced efficiently.
+- Access Control Matrix (ACM): A table that tracks who has what permissions over different objects (similar to Graham-Denning).
+- Subjects: Users or processes that request access to objects.
+- Objects: Files, databases, or system resources that require protection.
+- Rights: Permissions such as read, write, execute, grant, delete.
+
+The HRU model builds on the eight operations of the Graham-Denning Model and adds a focus on security decidability, meaning it examines whether a system can always determine if it is secure. The Key Operations (Similar to Graham-Denning Model) are:
+1. Create Object – A subject can create a new object and assign access rights.
+2. Create Subject – A subject can create another subject.
+3. Delete Object – A subject can delete an object.
+4. Delete Subject – A subject can delete another subject.
+5. Read Access Rights – A subject can view access rights for an object.
+6. Grant Access Rights – A subject can grant its own permissions to another subject.
+7. Delete Access Rights – A subject can revoke previously assigned permissions.
+8. Transfer Access Rights – A subject can pass its access rights to another subject.
+
+Strengths of the HRU Model:
+
+- Extends Graham-Denning by formally analyzing security properties of access control.
+- Allows flexible permission changes, making it useful in multi-user environments.
+- Supports both discretionary (DAC) and mandatory (MAC) access control models.
+
+Limitations of the HRU Model:
+
+- Proves that access control security is undecidable, meaning in complex systems, it is impossible to predict if security breaches can occur.
+- Can be complex to implement in large-scale systems with frequent changes.
+- Not a complete security solution—it provides a framework but requires additional security policies for enforcement.
+
+```mermaid
+flowchart TD
+
+%% Core Elements
+    S1[Subject A]
+    S2[Subject B]
+    O1[Object File.txt]
+    O2[Object DB]
+
+    ACM[[Access Control Matrix]]
+
+%% Rights
+    R1[Read]
+    R2[Write]
+    R3[Execute]
+    R4[Own]
+
+%% Operations
+    OP1[Create Subject]
+    OP2[Create Object]
+    OP3[Delete Subject]
+    OP4[Delete Object]
+    OP5[Enter Right]
+    OP6[Delete Right]
+
+%% Flow
+    S1 -->|Create| OP1
+    S1 -->|Create| OP2
+    S1 -->|Delete| OP3
+    S1 -->|Delete| OP4
+    S1 -->|Add Right| OP5
+    S1 -->|Remove Right| OP6
+
+    OP5 -->|Add "Read" to File.txt| ACM
+    OP6 -->|Remove "Write" from DB| ACM
+
+    ACM -->|Tracks Rights| O1
+    ACM -->|Tracks Rights| O2
+    ACM -->|Tracks Rights| S2
+
+    S1 -->|Access| ACM
+    S2 -->|Access| ACM
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+```
+
