Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -631,8 +631,8 @@ flowchart TD
     S1 -->|Add Right| OP5
     S1 -->|Remove Right| OP6
 
-    OP5 -->|Add "Read" to File.txt| ACM
-    OP6 -->|Remove "Write" from DB| ACM
+    OP5 -->|Add -Read to File.txt| ACM
+    OP6 -->|Remove -Write- from DB| ACM
 
     ACM -->|Tracks Rights| O1
     ACM -->|Tracks Rights| O2
@@ -646,3 +646,14 @@ flowchart TD
 
 ```
 
+The following table recaps all the security model we have studied:
+
+| **Model**                  | **Focus**                     | **Key Concepts**                                              | **Key Rules**                                  | **Use Case**                                     | **Pros**                                             | **Cons**                                                |
+|---------------------------|-------------------------------|---------------------------------------------------------------|--------------------------------------------------|---------------------------------------------------|------------------------------------------------------|---------------------------------------------------------|
+| **Bell–LaPadula (BLP)**   | Confidentiality               | Mandatory Access Control (MAC), Security Levels               | No Read Up (NRU), No Write Down (NWD)           | Military, Government, Classified Information     | Strong confidentiality enforcement                    | Does not address integrity or availability              |
+| **Biba Model**            | Integrity                     | Prevents data corruption, Enforces trust levels               | No Write Up (NWU), No Read Down (NRD)           | Financial records, Data integrity systems        | Strong protection against data tampering              | Does not protect confidentiality                        |
+| **Take-Grant Model**      | Access Rights Management      | Simplifies permission transfers                               | Take and Grant permissions                      | File systems, Basic access control               | Clear and efficient structure                          | Lacks complex security policies                         |
+| **Clark-Wilson Model**    | Data Integrity and Control    | Well-formed transactions, Separation of Duties                | Enforces security through controlled procedures | Banking, Enterprise security                     | Prevents fraud and enforces process integrity         | Requires strong implementation mechanisms               |
+| **Brewer-Nash (Chinese Wall)** | Conflict of Interest Prevention | Dynamic access based on user history                          | Restricts access to competing organizations     | Financial consulting, Legal firms, Auditing      | Prevents unethical behavior and insider threats       | Can be restrictive in collaborative environments        |
+| **Graham-Denning Model**  | Access Control Management     | Subjects, Objects, and Access Rights                          | Create, Delete, Grant, Transfer Rights          | OS File Systems, Multi-user databases            | Flexible permission management                         | Lacks built-in enforcement of security policies         |
+| **Harrison–Ruzzo–Ullman (HRU)** | Access Control & Security Analysis | Extends Graham-Denning, Security decidability         | Dynamic permission updates, Security state transitions | Multi-user systems, OS security              | Supports complex access control policies              | Proves that some security properties are undecidable    |
