Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -599,47 +599,57 @@ Limitations of the HRU Model:
 - Not a complete security solution—it provides a framework but requires additional security policies for enforcement.
 
 ```mermaid
+
 flowchart TD
+    A[Goal: Mathematical Access Control + Security Decidability]
 
-%% Core Elements
-    S1[Subject A]
-    S2[Subject B]
-    O1[Object File.txt]
-    O2[Object DB]
+    subgraph Access Control Matrix (ACM)
+        ACM1[Subjects]
+        ACM2[Objects]
+        ACM3[Rights: Read, Write, Execute, Grant, Delete]
+    end
 
-    ACM[[Access Control Matrix]]
+    subgraph Key Elements
+        S[Subjects]
+        O[Objects]
+        R[Access Rights]
+    end
 
-%% Rights
-    R1[Read]
-    R2[Write]
-    R3[Execute]
-    R4[Own]
+    A --> ACM1
+    A --> ACM2
+    A --> ACM3
+    A --> S
+    A --> O
+    A --> R
 
-%% Operations
-    OP1[Create Subject]
-    OP2[Create Object]
-    OP3[Delete Subject]
-    OP4[Delete Object]
-    OP5[Enter Right]
-    OP6[Delete Right]
+    subgraph Key Operations
+        CO[Create Object]
+        CS[Create Subject]
+        DO[Delete Object]
+        DS[Delete Subject]
+        RAR[Read Access Rights]
+        GAR[Grant Access Rights]
+        DAR[Delete Access Rights]
+        TAR[Transfer Access Rights]
+    end
 
-%% Flow
-    S1 -->|Create| OP1
-    S1 -->|Create| OP2
-    S1 -->|Delete| OP3
-    S1 -->|Delete| OP4
-    S1 -->|Add Right| OP5
-    S1 -->|Remove Right| OP6
+    ACM3 --> CO
+    ACM3 --> CS
+    ACM3 --> DO
+    ACM3 --> DS
+    ACM3 --> RAR
+    ACM3 --> GAR
+    ACM3 --> DAR
+    ACM3 --> TAR
 
-    OP5 -->|Add -Read to File.txt| ACM
-    OP6 -->|Remove -Write- from DB| ACM
+    A --> SecurityDecidability["Security Decidability:<br/>Can we determine if the system is always secure?"]
 
-    ACM -->|Tracks Rights| O1
-    ACM -->|Tracks Rights| O2
-    ACM -->|Tracks Rights| S2
+    style A fill:#d3e6ff,stroke:#0066cc,stroke-width:2px
+    style Access_Control_Matrix fill:#eaf7ea,stroke:#4caf50
+    style Key_Operations fill:#fff4e6,stroke:#ffa000
+    style SecurityDecidability fill:#ffe4e1,stroke:#ff6b6b
+```
 
-    S1 -->|Access| ACM
-    S2 -->|Access| ACM
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
