Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -603,7 +603,7 @@ Limitations of the HRU Model:
 flowchart TD
     A[Goal: Mathematical Access Control + Security Decidability]
 
-    subgraph Access Control Matrix (ACM)
+    subgraph Access Control Matrix -ACM
         ACM1[Subjects]
         ACM2[Objects]
         ACM3[Rights: Read, Write, Execute, Grant, Delete]
