--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md
@@ -1,4 +1,4 @@
-## 3.2 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula) ##
+## 3.2 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula) ##
 
 The **Trusted Computing Base (TCB)** refers to the core components of a system that are responsible for enforcing security. It includes:
 - The Operating System Kernel
