Update 3.03 Select Controls based upon system security requirements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
@@ -105,10 +105,30 @@ Several widely recognized security frameworks serve various industries and regul
 
 The choice of framework often depends on an organization’s industry, regulatory landscape, and specific risk profile. Some organizations may adopt a single framework, while others integrate elements from multiple frameworks to address diverse aspects of security management. Regardless of the approach, the key is to create a robust, adaptable, and measurable security strategy that evolves with emerging threats and business changes.
 
+:linl: Refer also to   [1.3 Evaluate, apply and sustain security governance principles](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#134-security-control-frameworks-eg-international-organization-for-standardization-iso-national-institute-of-standards-and-technology-nist-control-objectives-for-information-and-related-technology-cobit-sherwood-applied-business-security-architecture-sabsa-payment-card-industry-pci-federal-risk-and-authorization-management-program-fedramp)
 
+The **Deming Cycle (Plan-Do-Check-Act or PDCA)** is a continuous improvement model used in security management.
+Applying PDCA to Security Controls consists in the following phases:
+Plan – Identify risks and select appropriate security controls.
+Do – Implement the selected security controls.
+Check – Continuously monitor and test controls to ensure effectiveness.
+Act – Adjust controls based on findings and emerging threats.
 
+''' mermaid
 
+flowchart TD
+    A[Plan<br>(Identify risks & select security controls)]
+    B[Do<br>(Implement selected controls)]
+    C[Check<br>(Monitor & test control effectiveness)]
+    D[Act<br>(Adjust controls based on findings & new threats)]
+    A --> B
+    B --> C
+    C --> D
+    D --> A
+ 
+ '''
 
+ :necktie: PDCA ensures that security controls remain effective as threats evolve.
 
-
+ 
 
