Update 3.03 Select Controls based upon system security requirements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
@@ -12,7 +12,7 @@ Security controls are essential for ensuring that IT systems meet security objec
 |----------|---------------------------------------------------------------------------------------------------------|
 | **D**    | Minimal protection: reserved for systems evaluated but failing to qualify for higher classes :contentReference[oaicite:1]{index=1} |
 | **C1 & C2** | Discretionary protection (DAC):<br>– **C1**: basic Discretionary Access Control with user/data separation and identification/authentication;<br>– **C2**: finer‑grained DAC, individual login accountability, auditing, object reuse, and resource isolation :contentReference[oaicite:2]{index=2} |
-| **B1 – B3** | Mandatory protection (MAC) and security labeling:<br>– **B1**: labeled security protection with informal policy model and mandatory labeling;<br>– **B2**: structured protection—formal security policy model, covert‑channel analysis, strengthened authentication, configuration management;<br>– **B3**: security domains—reference‑monitor properties (tamper‑proof, complete mediation, analyzable), minimized trusted code, intrusion detection, trusted recovery procedures :contentReference[oaicite:3]{index=3} |
+| **B1–B3** | Mandatory protection (MAC) and security labeling:<br>– **B1**: labeled security protection with informal policy model and mandatory labeling;<br>– **B2**: structured protection—formal security policy model, covert‑channel analysis, strengthened authentication, configuration management;<br>– **B3**: security domains—reference‑monitor properties (tamper‑proof, complete mediation, analyzable), minimized trusted code, intrusion detection, trusted recovery procedures :contentReference[oaicite:3]{index=3} |
 | **A1**   | Verified design: functionally equivalent to B3 but adds formal top‑level specification and formal verification methods for design and implementation, trusted distribution, and rigorous assurance techniques :contentReference[oaicite:4]{index=4} |
 
 **ITSEC** was created by European countries to improve upon TCSEC. Unlike TCSEC, ITSEC:
@@ -38,7 +38,7 @@ The Components of Common Criteria are:
 - Security Targets (STs): Define security requirements for an individual product under evaluation.
 - Evaluation Assurance Levels (EALs): Rank products on a scale of EAL1 to EAL7 based on the depth of testing.
 
-'''mermaid
+```mermaid
 
 flowchart TD
     A[User or Community defines<br>Protection Profile (PP)]
@@ -53,7 +53,7 @@ flowchart TD
     C --> E
     D --> E
 
-'''
+```
 
 The following table recaps the Common Criteria Evaluation Assurance Levels:
 
@@ -105,7 +105,7 @@ Several widely recognized security frameworks serve various industries and regul
 
 The choice of framework often depends on an organization’s industry, regulatory landscape, and specific risk profile. Some organizations may adopt a single framework, while others integrate elements from multiple frameworks to address diverse aspects of security management. Regardless of the approach, the key is to create a robust, adaptable, and measurable security strategy that evolves with emerging threats and business changes.
 
-:linl: Refer also to   [1.3 Evaluate, apply and sustain security governance principles](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#134-security-control-frameworks-eg-international-organization-for-standardization-iso-national-institute-of-standards-and-technology-nist-control-objectives-for-information-and-related-technology-cobit-sherwood-applied-business-security-architecture-sabsa-payment-card-industry-pci-federal-risk-and-authorization-management-program-fedramp)
+🔗 Refer also to   [1.3 Evaluate, apply and sustain security governance principles](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#134-security-control-frameworks-eg-international-organization-for-standardization-iso-national-institute-of-standards-and-technology-nist-control-objectives-for-information-and-related-technology-cobit-sherwood-applied-business-security-architecture-sabsa-payment-card-industry-pci-federal-risk-and-authorization-management-program-fedramp)
 
 The **Deming Cycle (Plan-Do-Check-Act or PDCA)** is a continuous improvement model used in security management.
 Applying PDCA to Security Controls consists in the following phases:
@@ -114,7 +114,7 @@ Do – Implement the selected security controls.
 Check – Continuously monitor and test controls to ensure effectiveness.
 Act – Adjust controls based on findings and emerging threats.
 
-''' mermaid
+```mermaid
 
 flowchart TD
     A[Plan<br>(Identify risks & select security controls)]
@@ -125,8 +125,8 @@ flowchart TD
     B --> C
     C --> D
     D --> A
- 
- '''
+
+```
 
  :necktie: PDCA ensures that security controls remain effective as threats evolve.
 
