Update 3.03 Select Controls based upon system security requirements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
@@ -25,9 +25,9 @@ The table below makes a comparison between TCSEC and ITSEC:
 
 | Feature        | TCSEC (Orange Book)                              | ITSEC                                                   |
 |----------------|--------------------------------------------------|----------------------------------------------------------|
-| **Focus**      | Confidentiality only                             | Confidentiality, Integrity, and Availability :contentReference[oaicite:1]{index=1} |
-| **Evaluation** | Fixed security classes                           | Modular evaluation: separate **Functionality (F)** and **Assurance (E)** levels :contentReference[oaicite:2]{index=2} |
-| **Flexibility**| Rigid, predefined hierarchy                      | More adaptable; customizable to specific system needs :contentReference[oaicite:3]{index=3} |
+| **Focus**      | Confidentiality only                             | Confidentiality, Integrity, and Availability  |
+| **Evaluation** | Fixed security classes                           | Modular evaluation: separate **Functionality (F)** and **Assurance (E)** levels  |
+| **Flexibility**| Rigid, predefined hierarchy                      | More adaptable; customizable to specific system needs |
 
 TCSEC and ITSEC were both replaced by **Common Criteria (CC)** as the global standard.
 Common Criteria (CC) is an internationally recognized standard (ISO/IEC 15408) that evaluates IT products for security. It was created to unify TCSEC, ITSEC, and other national evaluation methods into a single framework.
