Update 3.03 Select Controls based upon system security requirements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
@@ -41,9 +41,9 @@ The Components of Common Criteria are:
 ```mermaid
 
 flowchart TD
-    A[User or Community defines<br>Protection Profile (PP)]
-    B[Vendor writes<br>Security Target (ST)]
-    C[Test Lab evaluates<br>Target of Evaluation (TOE)]
+    A[User or Community defines<br>Protection Profile - PP]
+    B[Vendor writes<br>Security Target - ST]
+    C[Test Lab evaluates<br>Target of Evaluation - TOE]
     D[EAL1 to EAL7<br>Evaluation Assurance Level]
     E[Certification Body issues<br>CC Certificate]
 
@@ -117,10 +117,10 @@ Act – Adjust controls based on findings and emerging threats.
 ```mermaid
 
 flowchart TD
-    A[Plan<br>(Identify risks & select security controls)]
-    B[Do<br>(Implement selected controls)]
-    C[Check<br>(Monitor & test control effectiveness)]
-    D[Act<br>(Adjust controls based on findings & new threats)]
+    A[Plan<br>Identify risks & select security controls]
+    B[Do<br>Implement selected controls]
+    C[Check<br>Monitor & test control effectiveness]
+    D[Act<br>Adjust controls based on findings & new threats]
     A --> B
     B --> C
     C --> D
