Update 3.03 Select Controls based upon system security requirements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
@@ -40,7 +40,7 @@ The Components of Common Criteria are:
 
 ```mermaid
 
-flowchart TD
+flowchart LR
     A[User or Community defines<br>Protection Profile - PP]
     B[Vendor writes<br>Security Target - ST]
     C[Test Lab evaluates<br>Target of Evaluation - TOE]
@@ -52,6 +52,9 @@ flowchart TD
     C -->|Evaluation depth determined by| D
     C --> E
     D --> E
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 
 ```
 
@@ -116,7 +119,7 @@ Act – Adjust controls based on findings and emerging threats.
 
 ```mermaid
 
-flowchart TD
+flowchart LR
     A[Plan<br>Identify risks & select security controls]
     B[Do<br>Implement selected controls]
     C[Check<br>Monitor & test control effectiveness]
@@ -126,6 +129,8 @@ flowchart TD
     C --> D
     D --> A
 
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
  :necktie: PDCA ensures that security controls remain effective as threats evolve.
