Update 3.03 Select Controls based upon system security requirements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
@@ -37,6 +37,9 @@ The Components of Common Criteria are:
 - Protection Profiles (PPs): Define security requirements for specific types of products (e.g., firewalls, operating systems).
 - Security Targets (STs): Define security requirements for an individual product under evaluation.
 - Evaluation Assurance Levels (EALs): Rank products on a scale of EAL1 to EAL7 based on the depth of testing.
+- SFR (Security Functional Requirement): Specifies an individual security function the Target of Evaluation must provide—such as how roles are authenticated—with selections drawn from a standardized Common Criteria catalog that allows variability across evaluations 
+- SAR (Security Assurance Requirement): Describes the assurance processes during development and evaluation (e.g. source code control, functional testing) that provide confidence the product correctly implements its claimed security functionalities, chosen from a CC-defined catalog 
+-TOE (Target of Evaluation): The specific product or system being evaluated under Common Criteria, including its hardware, firmware, software (and documentation) that is subject to testing against its Security Targe
 
 ```mermaid
 
