Update 3.03 Select Controls based upon system security requirements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
@@ -83,6 +83,8 @@ Common Criteria is widely used in government procurement, financial institutions
 
 :brain: The Common Criteria (CC) is a framework for evaluating and certifying the security of information technology products, focusing on defining security requirements and assurance levels to ensure trustworthiness and functionality.
 
+:brain: Common Criteria provides assurance that the process of specification, implementation and evaluation of a computer security product has been conducted in a rigorous and standard and repeatable manner at a level that is commensurate with the target environment for use. Common Criteria maintains a list of certified products, including operating systems, access control systems, databases, and key management systems.
+
 :link: The [Common Criteria Portal](https://www.commoncriteriaportal.org/index.cfm)
 
 ---
